--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+}
+
+.top{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
 }
 
 .orange{
@@ -16,3 +22,15 @@ body{
  .half-1 img{
      width: 100%;
  }
+
+.link-button{
+    text-decoration: none;
+    background-image:linear-gradient(tomato,yellow);
+    font-weight: 600;
+    padding: 10px 30px;
+    border-radius: 15px;
+    color: cornsilk;
+    
+    
+
+}
